--- a/_posts/2022-10-30-function.md
+++ b/_posts/2022-10-30-function.md
@@ -1,8 +1,8 @@
 ---
-title: 목적함수(Objective Function)와 비용함수(Cost Function)의 차이
+title: 목적함수와 비용함수의 차이
 date: 2022-10-30 11:00:00 +0800
 categories: [머신러닝, ML]
-tags: [cost function, loss function, objective function, 목적함수 비용함수 차이]
+tags: [cost function, loss function, objective function]
 mermaid: true
 pin: false
 published: true
